Make click+hold right-click menu work again on Mac (bug 193799), r=bryner/saari, sr=jst